--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         <div class="container mt-5">
             <div class="row fw-500 fs-16">
                 <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left">
-                    <img src="/html.tonatheme.com/2022/drvng/assets/images/logo.png" alt="logo footer" style="object-fit: contain;" width="300" height="300"
+                    <img src="/assets/images/logo.png" alt="logo footer" style="object-fit: contain;" width="300" height="300"
                         class="logo-footer d-inline-block mb-3" />
                 </div>
 
