--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
                 </div>
             </div>
             <div class="bottom-content text-center">
-                <h3>Learning Time: <span>Mon - Sat 9:00 am to 6:00 pm</span></h3>
+                <h3>Opening Time: <span>Mon - Sat 9:00 am to 6:00 pm</span></h3>
                 <ul class="social-links">
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
