--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dream Gear Maker</title>
+    <title>Dream Gear Maker | Where Champions Suit Up for Victory </title>
     <meta name="description"
         content=" Dream Gear Maker offers custom wrestling gear crafted to perfection. Create personalized singlets, shorts, and accessories for your wrestling journey. Worldwide delivery available">
     <meta name="keywords"
