--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
 
 
     <!-- cta two -->
-    <section class="cta-two" style="background-image: url(assets/images/background/bg-1.jpg);">
+    <section class="cta-two" style="background-image: url(assets/images/resource/cta.jpg);">
         <div class="auto-container">
             <h4>Dream Gear Makers: Victory Awaits!</h4>
             <div class="link-btn"><a href="#" class="theme-btn btn-style-one">Call Now</a></div>
@@ -314,7 +314,7 @@
                         <div class="shape"><img class="shape-2" src="assets/images/shape/shape-6.png" alt=""></div>
                         <div class="image">
                             <div class="img_hover_3">
-                                <img src="assets/images/resource/portrait-of-a-male-wrestler.jpg" alt="">
+                                <img src="assets/images/resource/about us-11.jpg" alt="">
                             </div>
                         </div>
                     </div>
