--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="inner-container">
                         <!--Logo-->
                         <div class="logo-box">
-                            <div class="logo"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></div>
+                            <div class="logo"><a href="index.html"><img class="logo-1" src="assets/images/logo.png" alt=""></a></div>
                         </div>
                         <div class="right-column">
                             <!--Nav Box-->
@@ -167,7 +167,7 @@
                 <div class="close-btn"><i class="icon flaticon-cancel"></i></div>
 
                 <nav class="menu-box">
-                    <div class="nav-logo"><a href="index.html"><img src="assets/images/logo.png" alt="" title=""></a>
+                    <div class="nav-logo"><a href="index.html"><img class="mobile-logo" src="assets/images/logo.png" alt="" title=""></a>
                     </div>
                     <div class="menu-outer">
                         <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -279,7 +279,7 @@
 
 
         <!-- Our Service -->
-        <section class="service-section" style="background-image: url(assets/images/resource/image-2.jpg);">
+        <section class="service-section" style="background-image: url(assets/images/resource/gallery-5.jpg);">
             <div class="auto-container">
                 <div class="row">
                     <div class="col-lg-8">
@@ -337,7 +337,7 @@
 
             <div class="cta wow fadeInUp" data-wow-duration="1500ms">
                 <div class="auto-container">
-                    <div class="content" style="background-image: url(assets/images/background/bg-2.jpg);">
+                    <div class="content" style="background-image: url(assets/images/resource/1-cta.jpg);">
                         <h2>Free Wrestling Gear Consultation</h2>
                         <div class="text">First impressions means everything. Let Dream Gear Maker help you to make sure
                             you never go wrong.
@@ -415,6 +415,169 @@
             </div>
 
         </section>
+
+<br>
+<br>
+<br>
+<br>
+
+        <!-- Gallery Section -->
+ <section id="gallery" class="gallery pt-3 light-section" data-aos="fade-up">
+    <div class="container">
+        <h3 class="header-gallery">Our Gallery</h3>
+        <div class="gallery-photos">
+
+            <!-- First Photo -->
+            <div class="image">
+                <a title="Gallery Photo 1" href="/img/gallery-3.jpg" data-lightbox="Gallery1">
+                    <img src="assets/images/resource/gallery-3.jpg" alt="Gallery Photo 1">
+                </a>
+            </div>
+
+            <!-- Second Photo -->
+            <div class="image">
+                <a title="Gallery Photo 2" href="assets/images/resource/gallery-6.jpg" data-lightbox="gallery2">
+                    <img src="assets/images/resource/gallery-6.jpg" alt="Gallery Photo 2">
+                </a>
+            </div>
+
+            <!-- Third Photo -->
+            <div class="image">
+                <a title="Gallery Photo 3" href="assets/images/resource/gallery-5.jpg" data-lightbox="gallery3">
+                    <img src="assets/images/resource/gallery-5.jpg" alt="Gallery Photo 3">
+                </a>
+            </div>
+
+            <!-- Fourth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 4" href="assets/images/resource/gallery-4.jpg" data-lightbox="gallery4">
+                    <img src="assets/images/resource/gallery-4.jpg" alt="Gallery Photo 4">
+                </a>
+            </div>
+
+            <!-- Fifth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 5" href="assets/images/resource/gallery-2.jpg" data-lightbox="gallery5">
+                    <img src="assets/images/resource/gallery-2.jpg" alt="Gallery Photo 5">
+                </a>
+            </div>
+
+            <!-- Sixth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 6" href="assets/images/resource/gallery-1.jpg" data-lightbox="gallery6">
+                    <img src="assets/images/resource/gallery-1.jpg" alt="Gallery Photo 6">
+                </a>
+            </div>
+
+             <!-- First Photo -->
+             <div class="image">
+                <a title="Gallery Photo 1" href="/img/gallery-7.jpg" data-lightbox="Gallery1">
+                    <img src="assets/images/resource/gallery-7.jpg" alt="Gallery Photo 1">
+                </a>
+            </div>
+
+            <!-- Second Photo -->
+            <div class="image">
+                <a title="Gallery Photo 2" href="assets/images/resource/gallery-8.jpg" data-lightbox="gallery2">
+                    <img src="assets/images/resource/gallery-8.jpg" alt="Gallery Photo 2">
+                </a>
+            </div>
+
+            <!-- Third Photo -->
+            <div class="image">
+                <a title="Gallery Photo 3" href="assets/images/resource/gallery-10.jpg" data-lightbox="gallery3">
+                    <img src="assets/images/resource/gallery-10.jpg" alt="Gallery Photo 3">
+                </a>
+            </div>
+
+            <!-- Fourth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 4" href="assets/images/resource/gallery-11.jpg" data-lightbox="gallery4">
+                    <img src="assets/images/resource/gallery-11.jpg" alt="Gallery Photo 4">
+                </a>
+            </div>
+
+            <!-- Fifth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 5" href="assets/images/resource/gallery-12.jpg" data-lightbox="gallery5">
+                    <img src="assets/images/resource/gallery-12.jpg" alt="Gallery Photo 5">
+                </a>
+            </div>
+
+            <!-- Sixth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 6" href="assets/images/resource/gallery-13.jpg" data-lightbox="gallery6">
+                    <img src="assets/images/resource/gallery-13.jpg" alt="Gallery Photo 6">
+                </a>
+            </div>
+
+             <!-- First Photo -->
+             <div class="image">
+                <a title="Gallery Photo 1" href="/img/gallery-14.jpg" data-lightbox="Gallery1">
+                    <img src="assets/images/resource/gallery-14.jpg" alt="Gallery Photo 1">
+                </a>
+            </div>
+
+            <!-- Second Photo -->
+            <div class="image">
+                <a title="Gallery Photo 2" href="assets/images/resource/gallery-15.jpg" data-lightbox="gallery2">
+                    <img src="assets/images/resource/gallery-15.jpg" alt="Gallery Photo 2">
+                </a>
+            </div>
+
+            <!-- Third Photo -->
+            <div class="image">
+                <a title="Gallery Photo 3" href="assets/images/resource/gallery-16.jpg" data-lightbox="gallery3">
+                    <img src="assets/images/resource/gallery-16.jpg" alt="Gallery Photo 3">
+                </a>
+            </div>
+
+            <!-- Fourth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 4" href="assets/images/resource/gallery-17.jpg" data-lightbox="gallery4">
+                    <img src="assets/images/resource/gallery-17.jpg" alt="Gallery Photo 4">
+                </a>
+            </div>
+
+            <!-- Fifth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 5" href="assets/images/resource/gallery-18.jpg" data-lightbox="gallery5">
+                    <img src="assets/images/resource/gallery-18.jpg" alt="Gallery Photo 5">
+                </a>
+            </div>
+
+            <!-- Sixth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 6" href="assets/images/resource/gallery-19.jpg" data-lightbox="gallery6">
+                    <img src="assets/images/resource/gallery-19.jpg" alt="Gallery Photo 6">
+                </a>
+            </div>
+
+             <!-- First Photo -->
+             <div class="image">
+                <a title="Gallery Photo 1" href="/img/gallery-20.jpg" data-lightbox="Gallery1">
+                    <img src="assets/images/resource/gallery-20.jpg" alt="Gallery Photo 1">
+                </a>
+            </div>
+
+            <!-- Second Photo -->
+            <div class="image">
+                <a title="Gallery Photo 2" href="assets/images/resource/gallery-21.jpg" data-lightbox="gallery2">
+                    <img src="assets/images/resource/gallery-21.jpg" alt="Gallery Photo 2">
+                </a>
+            </div>
+
+            <!-- Third Photo -->
+            <div class="image">
+                <a title="Gallery Photo 3" href="assets/images/resource/gallery-22.jpg" data-lightbox="gallery3">
+                    <img src="assets/images/resource/gallery-22.jpg" alt="Gallery Photo 3">
+                </a>
+            </div>
+
+            
+        </div>
+    </div>
+</section>
 
 
 
