--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Premium Kneepads | Dream Gear Maker</title>
+    <title>Order Now | Dream Gear Maker</title>
     <!-- Stylesheets -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -203,7 +203,7 @@
             </div>
         </div>
 
-        <section class="page-title" style="background-image: url(assets/images/background/lifting-weight.jpg);">
+        <section class="page-title" style="background-image: url(assets/images/resource/contact.jpg);">
             <div class="auto-container">
                 <div class="content-box">
                     <div class="content-wrapper">
@@ -272,7 +272,7 @@
                 </div>
             </div>
         </section>
- <!-- Gallery Section -->
+          <!-- Gallery Section -->
  <section id="gallery" class="gallery pt-3 light-section" data-aos="fade-up">
     <div class="container">
         <h3 class="header-gallery">Our Gallery</h3>
@@ -280,7 +280,7 @@
 
             <!-- First Photo -->
             <div class="image">
-                <a title="Gallery Photo 1" href="/img/gallery-1.jpg" data-lightbox="Gallery1">
+                <a title="Gallery Photo 1" href="/img/gallery-3.jpg" data-lightbox="Gallery1">
                     <img src="assets/images/resource/gallery-3.jpg" alt="Gallery Photo 1">
                 </a>
             </div>
@@ -319,9 +319,118 @@
                     <img src="assets/images/resource/gallery-1.jpg" alt="Gallery Photo 6">
                 </a>
             </div>
+
+             <!-- First Photo -->
+             <div class="image">
+                <a title="Gallery Photo 1" href="/img/gallery-7.jpg" data-lightbox="Gallery1">
+                    <img src="assets/images/resource/gallery-7.jpg" alt="Gallery Photo 1">
+                </a>
+            </div>
+
+            <!-- Second Photo -->
+            <div class="image">
+                <a title="Gallery Photo 2" href="assets/images/resource/gallery-8.jpg" data-lightbox="gallery2">
+                    <img src="assets/images/resource/gallery-8.jpg" alt="Gallery Photo 2">
+                </a>
+            </div>
+
+            <!-- Third Photo -->
+            <div class="image">
+                <a title="Gallery Photo 3" href="assets/images/resource/gallery-10.jpg" data-lightbox="gallery3">
+                    <img src="assets/images/resource/gallery-10.jpg" alt="Gallery Photo 3">
+                </a>
+            </div>
+
+            <!-- Fourth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 4" href="assets/images/resource/gallery-11.jpg" data-lightbox="gallery4">
+                    <img src="assets/images/resource/gallery-11.jpg" alt="Gallery Photo 4">
+                </a>
+            </div>
+
+            <!-- Fifth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 5" href="assets/images/resource/gallery-12.jpg" data-lightbox="gallery5">
+                    <img src="assets/images/resource/gallery-12.jpg" alt="Gallery Photo 5">
+                </a>
+            </div>
+
+            <!-- Sixth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 6" href="assets/images/resource/gallery-13.jpg" data-lightbox="gallery6">
+                    <img src="assets/images/resource/gallery-13.jpg" alt="Gallery Photo 6">
+                </a>
+            </div>
+
+             <!-- First Photo -->
+             <div class="image">
+                <a title="Gallery Photo 1" href="/img/gallery-14.jpg" data-lightbox="Gallery1">
+                    <img src="assets/images/resource/gallery-14.jpg" alt="Gallery Photo 1">
+                </a>
+            </div>
+
+            <!-- Second Photo -->
+            <div class="image">
+                <a title="Gallery Photo 2" href="assets/images/resource/gallery-15.jpg" data-lightbox="gallery2">
+                    <img src="assets/images/resource/gallery-15.jpg" alt="Gallery Photo 2">
+                </a>
+            </div>
+
+            <!-- Third Photo -->
+            <div class="image">
+                <a title="Gallery Photo 3" href="assets/images/resource/gallery-16.jpg" data-lightbox="gallery3">
+                    <img src="assets/images/resource/gallery-16.jpg" alt="Gallery Photo 3">
+                </a>
+            </div>
+
+            <!-- Fourth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 4" href="assets/images/resource/gallery-17.jpg" data-lightbox="gallery4">
+                    <img src="assets/images/resource/gallery-17.jpg" alt="Gallery Photo 4">
+                </a>
+            </div>
+
+            <!-- Fifth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 5" href="assets/images/resource/gallery-18.jpg" data-lightbox="gallery5">
+                    <img src="assets/images/resource/gallery-18.jpg" alt="Gallery Photo 5">
+                </a>
+            </div>
+
+            <!-- Sixth Photo -->
+            <div class="image">
+                <a title="Gallery Photo 6" href="assets/images/resource/gallery-19.jpg" data-lightbox="gallery6">
+                    <img src="assets/images/resource/gallery-19.jpg" alt="Gallery Photo 6">
+                </a>
+            </div>
+
+             <!-- First Photo -->
+             <div class="image">
+                <a title="Gallery Photo 1" href="/img/gallery-20.jpg" data-lightbox="Gallery1">
+                    <img src="assets/images/resource/gallery-20.jpg" alt="Gallery Photo 1">
+                </a>
+            </div>
+
+            <!-- Second Photo -->
+            <div class="image">
+                <a title="Gallery Photo 2" href="assets/images/resource/gallery-21.jpg" data-lightbox="gallery2">
+                    <img src="assets/images/resource/gallery-21.jpg" alt="Gallery Photo 2">
+                </a>
+            </div>
+
+            <!-- Third Photo -->
+            <div class="image">
+                <a title="Gallery Photo 3" href="assets/images/resource/gallery-22.jpg" data-lightbox="gallery3">
+                    <img src="assets/images/resource/gallery-22.jpg" alt="Gallery Photo 3">
+                </a>
+            </div>
+
+            
         </div>
     </div>
 </section>
+
+
         <!--Testimonials Section-->
 
         <section id="testimonials">
