--- a/kneepads.html
+++ b/kneepads.html
@@ -267,7 +267,7 @@
 
         <!-- Bnner Section -->
         <!-- Page Title -->
-        <section class="page-title" style="background-image: url(assets/images/background/kneepads.JPG);">
+        <section class="page-title" style="background-image: url(assets/images/resource/kneepad-main.jpg);">
             <div class="auto-container">
                 <div class="content-box">
                     <div class="content-wrapper">
@@ -292,7 +292,7 @@
             <div class="auto-container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="clearfix"><img src="assets/images/resource/kneepad-second.jpg" alt="">
+                        <div class="clearfix"><img src="assets/images/resource/second-kneepad.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -338,7 +338,7 @@
 
 
         <!-- cta two -->
-        <section class="cta-two" style="background-image: url(assets/images/background/bg-1.jpg);">
+        <section class="cta-two" style="background-image: url(assets/images/resource/cta.jpg);">
             <div class="auto-container">
                 <h4>Dream Gear Makers: Victory Awaits!</h4>
                 <div class="link-btn"><a href="#" class="theme-btn btn-style-one">Call Now</a></div>
@@ -389,7 +389,7 @@
                             <div class="shape"><img class="shape-2" src="assets/images/shape/shape-6.png" alt=""></div>
                             <div class="image">
                                 <div class="img_hover_3">
-                                    <img src="assets/images/resource/portrait-of-a-male-wrestler.jpg" alt="">
+                                    <img src="assets/images/resource/about us-11.jpg" alt="">
                                 </div>
                             </div>
                         </div>
