--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     <div class="inner-container">
                         <div class="left-column">
                             <ul class="contact-info">
-                                <li><i class="flaticon-pin"></i>World Wide Shipping</li>
+                                <li><i class="fa fa-globe"></i>World Wide Shipping</li>
                                 <li><a href="https://www.instagram.com/dreamgearmaker/"><i
                                             class="flaticon-email"></i>dreamgearmaker@gmail.com</a>
 
