--- a/about.html
+++ b/about.html
@@ -73,9 +73,7 @@
                                             class="icon-1 fab fa-facebook-f"></i></a></li>
 
 
-                                <li><a
-                                        href="https://www.google.com/maps/place/5290+State+Hwy+121,+Lewisville,+TX+75056,+USA/@33.070808,-96.8789717,17z/data=!3m1!4b1!4m6!3m5!1s0x864c3b2a95ef8d9b:0xaac01206208e1d36!8m2!3d33.0708044!4d-96.876928!16s%2Fg%2F11c65bxndn?entry=ttu"><i
-                                            class="icon-1 fab fa-google-plus-g"></i></a></li>
+                                <i class="fa fa-instagram"></i>
                             </ul>
                         </div>
 
@@ -232,19 +230,17 @@
                     <div class="col-lg-6">
                         <div class="sec-title">
                             <h4>About Us</h4>
-                            <h2>Dream Gear Makers: Your Style, Your Victory!</h2>
-                            <div class="text-one">Welcome to Professional Wrestling Gears: Your One-Stop Shop for
+                            <h2>Dream Gear Maker: Your Style, Your Victory!</h2>
+                            <div class="text-one">Welcome to Professional Wrestling Gear: Your One-Stop Shop for
                                 Wrestling Attire and Equipment</div>
                         </div>
-                        <div class="text-two">At Dream Gear Makers, we're passionate about wrestling and dedicated to
+                        <div class="text-two">At Dream Gear Maker, we're passionate about wrestling and dedicated to
                             crafting top-quality custom gear that helps athletes perform at their best. With a
                             commitment to quality and individuality, we specialize in creating personalized wrestling
                             attire tailored to your unique preferences and needs. <br>
                             <br>
                             From singlets to accessories, our focus is on providing gear that not only looks great but
-                            also enhances your comfort and performance on the mat. Whether you're a beginner or a
-                            seasoned competitor, we're here to help you unleash your style and dominate the
-                            competition.<br>
+                            also enhances your comfort and star presencein the ring. <br>
                             <br>
                             Join us in bringing your wrestling dreams to life with gear that reflects your passion and
                             elevates your game. <br>
@@ -269,7 +265,7 @@
     <!-- cta two -->
     <section class="cta-two" style="background-image: url(assets/images/resource/cta.jpg);">
         <div class="auto-container">
-            <h4>Dream Gear Makers: Victory Awaits!</h4>
+            <h4>Dream Gear Maker: Wrestling Gear for Champions</h4>
             <div class="link-btn"><a href="#" class="theme-btn btn-style-one">Call Now</a></div>
         </div>
     </section>
@@ -283,7 +279,7 @@
                 <div class="col-lg-6">
                     <div class="sec-title">
                         <h4>Our Benfits</h4>
-                        <h2>Why Choose Dream Gear Makers?</h2>
+                        <h2>Why Choose Dream Gear Maker?</h2>
                     </div>
                     <div class="text mb-40">There are many variations of wrestling gear
                         available, but the majority have been tailored to perfection,
@@ -425,7 +421,7 @@
                 </div>
 
                 <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
-                    <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20">Gears</strong></p>
+                    <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20">Gear</strong></p>
                     <div class="footer-nav">
                         <p>
                             <a title="Custom Wrestling Gear" href="/about.html">
@@ -476,7 +472,7 @@
                                 <path
                                     d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
                             </svg>
-                            <a title="Footer Phone Number" href="tel:+17794230383"> +1 (111) 111-1111 </a>
+                            <a title="Footer Phone Number" href="tel:+17794230383"> (214) 407-4751 </a>
                         </p>
                         <p class="d-flex">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -499,7 +495,7 @@
             <hr class="mt-4" />
 
             <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy;
-                Dream Gear Makers 2024. All
+                Dream Gear Maker 2024. All
                 rights
                 reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-white text-center">The content available on this website is owned by us
