--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,7 @@
                                             class="icon-1 fab fa-facebook-f"></i></a></li>
 
 
-                                <li><a
-                                        href="https://www.google.com/maps/place/5290+State+Hwy+121,+Lewisville,+TX+75056,+USA/@33.070808,-96.8789717,17z/data=!3m1!4b1!4m6!3m5!1s0x864c3b2a95ef8d9b:0xaac01206208e1d36!8m2!3d33.0708044!4d-96.876928!16s%2Fg%2F11c65bxndn?entry=ttu"><i
-                                            class="icon-1 fab fa-google-plus-g"></i></a></li>
+                                <i class="fa fa-instagram"></i>
                             </ul>
                         </div>
 
@@ -212,7 +210,7 @@
                             <li>Contact</li>
                         </ul>
                         <div class="title">
-                            <h1>Contact Dream Gear Makers</h1>
+                            <h1>Contact Dream Gear Maker</h1>
                         </div>
                     </div>
                 </div>
@@ -257,7 +255,7 @@
                         <div class="inner-box">
                             <div class="icon"><i class="flaticon-phone-ringing"></i></div>
                             <div class="text">Call 24/7</div>
-                            <h4><a href="tel:+1(246)3330791">+1 (111) 111-1111</a></h4>
+                            <h4><a href="tel:+1(246)3330791">(214) 407-4751</a></h4>
                         </div>
                     </div>
                 </div>
@@ -526,7 +524,7 @@
                     </div>
 
                     <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
-                        <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20">Gears</strong></p>
+                        <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20">Gear</strong></p>
                         <div class="footer-nav">
                             <p>
                                 <a title="Custom Wrestling Gear" href="/about.html">
@@ -577,7 +575,7 @@
                                     <path
                                         d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
                                 </svg>
-                                <a title="Footer Phone Number" href="tel:+17794230383"> +1 (111) 111-1111 </a>
+                                <a title="Footer Phone Number" href="tel:+17794230383"> (214) 407-4751 </a>
                             </p>
                             <p class="d-flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -600,7 +598,7 @@
                 <hr class="mt-4" />
 
                 <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy;
-                    Dream Gear Makers 2024. All
+                    Dream Gear Maker 2024. All
                     rights
                     reserved.</p>
                 <p class="pt-2 pb-3 fw-500 text-white text-center">The content available on this website is owned by us
