--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                                 </li>
 
-                                <li><i class="flaticon-clock"></i>Mon - Sat 9:00 am to 6:00 pm</li>
+
                             </ul>
 
                             </ul>
@@ -215,7 +215,7 @@
 
         <!-- Bnner Section -->
         <!-- Page Title -->
-        <section class="page-title" style="background-image: url(assets/images/main-slider/index-hero.jpg);">
+        <section class="page-title" style="background-image: url(assets/images/background/gallery-3.png);">
             <div class="auto-container">
                 <div class="content-box">
                     <div class="content-wrapper">
@@ -428,7 +428,7 @@
                 </div>
             </div>
         </section>
-        s
+
         <!-- About section -->
         <section class="about-section">
             <div class="auto-container">
@@ -541,7 +541,8 @@
                         <div class="text">First impressions means everything. Let Dream Gear Maker help you to make sure
                             you never go wrong.
                         </div>
-                        <button class="button-32" role="button">Call Now</button>
+                        <a href="tel:+12144074751" class="button-32" role="button">Call Now</a>
+
                     </div>
 
                 </div>
@@ -556,7 +557,7 @@
                     <div class="col-lg-6">
                         <div class="sec-title">
                             <h4>American Made Wrestling Gear</h4>
-                            <h2>Premium Wrestling Gear made with High Quality materials and Stitching</h2>
+                            <h2>Premium Wrestling Gear Made With High Quality Materials and Stitching</h2>
                         </div>
                         <div class="text-two">At Dream Gear Maker, we're dedicated to supplying top-notch wrestling
                             gear that empowers athletes to reach new heights in the ring. With our expertise and
@@ -574,14 +575,15 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="text-box">
-                                    <h4><i class="fas fa-arrow-circle-right"></i> Guaranteed Delivery Wrestling Gear</h4>
+                                    <h4><i class="fas fa-arrow-circle-right"></i> Guaranteed Delivery Wrestling Gear
+                                    </h4>
                                     <div class="text">Receive your gear swiftly, ensuring you're always ring-ready .
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        Each piece is meticulously crafted to not only look great but also to optimize performance and
+                        Each piece is meticulously crafted to look great but also to optimize performance and
                         comfort. Choosing Dream Gear Maker means you’re investing in yourself by choosing the wrestling
                         gear maker of champions!
 
@@ -618,22 +620,26 @@
                             <h2>Crafted Excellence: Wrestling Gear of Superior Quality and Durability</h2>
 
                         </div>
-                        <div class="text-two">Dream Gear Maker specializes in creating TV Quality professional wrestling
-                            gear. Our a commitment to excellence in the world of wrestling gear in proven by our clients
-                            and the quality of our work. <br>
+                        <div class="text-two">
+                            Introducing Dream Gear: Your Destination for Wrestling Gear of Superior Quality and
+                            Durability. At Dream Gear, we're dedicated to providing wrestlers with top-notch gear that's
+                            built to last and meet the rigors of the sport. <br>
                             <br>
-                            Dream Gear Maker understands that success in wrestling requires you to look the part so that
-                            you may stand out, get noticed and develop your career. That’s why our decade plus of
-                            experience and passion goes into every stitch, every design, and every detail of our custom
-                            wrestling singlets and accessories. <br> <br> Choosing Dream Gear Maker means you’re
-                            investing in yourself by choosing the wrestling gear maker of champions!<br>
+                            Each piece of our wrestling gear is meticulously crafted with premium materials, ensuring
+                            exceptional durability and performance. Whether you're training hard or competing in the
+                            ring, our gear is designed to offer maximum comfort, support, and protection.
+                            <br> <br>
+                            When you choose Dream Gear, you're selecting gear that's trusted by wrestlers across all
+                            levels. Our commitment to quality means you can step onto the mat with confidence, knowing
+                            you're outfitted with the finest wrestling gear available.<br>
                             <br>
-                           
+
                             Questions about sizing or customization? Our team is here to assist you. Get in touch now!
                         </div>
 
                         <!-- HTML !-->
-                        <button class="button-32" role="button">Call Now</button>
+                        <a href="tel:+12144074751" class="button-32" role="button">Call Now</a>
+
 
 
 
@@ -799,7 +805,7 @@
                                 <path
                                     d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
                             </svg>
-                            <a title="Footer Phone Number" href="tel:+17794230383"> (214) 407-4751 </a>
+                            <a title="Footer Phone Number" href="tel:+12144074751"> (214) 407-4751 </a>
                         </p>
                         <p class="d-flex">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -808,7 +814,7 @@
                                     d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
                                 <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                             </svg>
-                            <span> The Colony, TX, United States, 75056 </span>
+                            <span> Made in texas </span>
                         </p>
                         <!-- <p><i class="fa-solid fa-tower-broadcast text-primary me-2"></i> 24 Hours Emergency Services</p> -->
 
