--- a/singlets.html
+++ b/singlets.html
@@ -48,18 +48,19 @@
 
                                 </li>
 
-                                <li><i class="flaticon-clock"></i>Mon - Sat 9:00 am to 6:00 pm</li>
+
                             </ul>
 
                             </ul>
                         </div>
                         <div class="right-column">
                             <ul class="social-icon">
-                                <li><a href="https://www.facebook.com/profile.php?id=100083208098697"><i
+                                <li><a href="https://www.facebook.com/profile.php?id=100083208098697" target="_blank"><i
                                             class="icon-1 fab fa-facebook-f"></i></a></li>
 
 
-                                <i class="fa fa-instagram"></i>
+                                <li><a href="https://www.instagram.com/dreamgearmaker/" target="_blank"><i
+                                            class="fa fa-instagram" style="font-size:24px;color:red"></i></a></li>
                             </ul>
                         </div>
 
@@ -202,7 +203,7 @@
 
         <!-- Bnner Section -->
         <!-- Page Title -->
-        <section class="page-title" style="background-image: url(assets/images/background/singlets.jpg);">
+        <section class="page-title" style="background-image: url(assets/images/background/premium-photo.png);">
             <div class="auto-container">
                 <div class="content-box">
                     <div class="content-wrapper">
@@ -210,10 +211,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li>About</li>
                     </ul> -->
-                        <ul class="bread-crumb">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="index.html">Wrestling Singlets</a></li>
-                        </ul>
+
                         <div class="title">
                             <h1>Wrestling Singlets</h1>
                         </div>
@@ -227,7 +225,8 @@
             <div class="auto-container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="clearfix-3"><img src="assets/images/resource/review-1.png" alt="">
+                        <div class="clearfix-3"><img class="clearfix-3" src="assets/images/resource/review-1.png"
+                                alt="">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -236,27 +235,27 @@
                             <h2>Dream Gear Maker: Champion's Choice!</h2>
                             <br>
                             <div class="text-two">
-                                Dream Gear Maker is more than just a brand; it's a commitment to excellence in the
-                                world of wrestling gear. We're a team of dedicated craftsmen and athletes, driven by the
-                                passion for the sport and the desire to elevate every wrestler's experience on the mat.
-                                Our journey began with a simple goal: to provide wrestlers of all levels with gear that
-                                not only meets but exceeds their expectations.<br>
+                                When it comes to wrestling singlets, Dream Gear Maker understands their significance in
+                                both performance and appearance in the ring. We take pride in crafting each singlet with
+                                meticulous attention to detail, ensuring they are not only stylish but also durable and
+                                functional.<br>
                                 <br>
-                                At Dream Gear Maker, we understand that wrestling is not just a sport; it's a way of
-                                life. That's why we pour our hearts and souls into every stitch, every design, and every
-                                detail of our custom wrestling singlets and accessories. Each piece is meticulously
-                                crafted to not only look great but also to optimize performance and comfort, giving you
-                                the edge you need to succeed. <br>
+                                Our singlets are designed to provide the perfect balance of flexibility and support,
+                                allowing wrestlers to move freely while maintaining coverage and comfort. Made from
+                                high-quality materials, they offer moisture-wicking properties to keep you dry and
+                                focused during intense matches. <br>
                                 <br>
-                                From singlets to accessories, our mission is to empower athletes with personalized gear
-                                that not only looks great but also enhances performance. <br>
+                                With Dream Gear Maker, you're choosing gear trusted by wrestlers of all levels. Our
+                                commitment to excellence means you can step into the ring with confidence, knowing your
+                                singlet is up to the challenge of helping you perform at your best. <br>
                                 <br>
                                 Join us and experience the difference of Dream Gear Maker – where your wrestling dreams
                                 become a reality.
                             </div>
 
                             <!-- HTML !-->
-                            <button class="button-32" role="button">Call Now</button>
+                            <a href="tel:+12144074751" class="button-32" role="button">Call Now</a>
+
 
 
 
@@ -313,7 +312,8 @@
                             Questions about sizing or customization? Our team is here to assist you. Get in touch now!
                             <br>
                             <br>
-                            <button class="button-32" role="button">Call Now</button>
+                            <a href="tel:+12144074751" class="button-32" role="button">Call Now</a>
+
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -335,14 +335,14 @@
         <section id="testimonials">
             <div class="testimonials">
                 <div class="inner">
-                    <h1>Testimonials</h1>
+                    <h2>Testimonials</h2>
                     <div class="border"></div>
 
                     <div class="row">
                         <div class="col">
                             <div class="testimonial">
-                                <img class="logo-test" src="/assets/images/resource/review-1.jpg" alt="">
-                                <div class="name">Gonzalez</div>
+                                <img class="logo-test" src="/assets/images/resource/review-1.png" alt="">
+                                <div class="name">Big Jay Bishop</div>
                                 <div class="stars">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -427,122 +427,122 @@
         </div>
     </div> -->
 
-        
-    <footer class="position-relative pt-3">
-        <!-- <img class="position-absolute footer-bg" src="/img/grass.jpg" alt="lawn with house"> -->
-        <div class="container mt-5">
-            <div class="row fw-500 fs-16">
-                <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left">
-                    <img src="/assets/images/logo.png" alt="logo footer" style="object-fit: contain;" width="300"
-                        height="300" class="logo-footer d-inline-block mb-3" />
-                </div>
 
-                <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
-                    <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20">Gear</strong></p>
-                    <div class="footer-nav">
-                        <p>
-                            <a title="Custom Wrestling Gear" href="/about.html">
-                               Custom Wrestling Gear
-                            </a>
-                        </p>
-
-                        <p>
-                            <a title="Wrestling Singlets" href="/singlets.html">
-                                Wrestling Singlets
-                            </a>
-                        </p>
-
-                        <p>
-                            <a title="Wrestling Tights" href="/tights.html">
-                                Wrestling Tights
-                            </a>
-                        </p>
-
-                        <p>
-                            <a title="Premium Kneepads:" href="/kneepads.html">
-                                Premium Kneepads
-                            </a>
-                        </p>
-
-
-
-                        <p>
-                            <a title="Order Now" href="/contact.html">
-                                Order Now
-                            </a>
-                        </p>
-
-
-
-
+        <footer class="position-relative pt-3">
+            <!-- <img class="position-absolute footer-bg" src="/img/grass.jpg" alt="lawn with house"> -->
+            <div class="container mt-5">
+                <div class="row fw-500 fs-16">
+                    <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left">
+                        <img src="/assets/images/logo.png" alt="logo footer" style="object-fit: contain;" width="300"
+                            height="300" class="logo-footer d-inline-block mb-3" />
                     </div>
-                </div>
 
-                
+                    <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
+                        <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20">Gear</strong></p>
+                        <div class="footer-nav">
+                            <p>
+                                <a title="Custom Wrestling Gear" href="/about.html">
+                                    Custom Wrestling Gear
+                                </a>
+                            </p>
 
-                <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
-                    <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20"> Contact us</strong></p>
-                    <div class="footer-nav">
-                        <p class="d-flex mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-telephone me-3" viewBox="0 0 16 16">
-                                <path
-                                    d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-                            </svg>
-                            <a title="Footer Phone Number" href="tel:+17794230383"> (214) 407-4751 </a>
-                        </p>
-                        <p class="d-flex">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-geo-alt me-3" viewBox="0 0 16 16">
-                                <path
-                                    d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
-                                <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                            </svg>
-                            <span> The Colony, TX, United States, 75056 </span>
-                        </p>
-                        <!-- <p><i class="fa-solid fa-tower-broadcast text-primary me-2"></i> 24 Hours Emergency Services</p> -->
+                            <p>
+                                <a title="Wrestling Singlets" href="/singlets.html">
+                                    Wrestling Singlets
+                                </a>
+                            </p>
 
-                        <!-- <a title="Facebook Navigation" class=" d-flex align-items-center" target="_blank"
+                            <p>
+                                <a title="Wrestling Tights" href="/tights.html">
+                                    Wrestling Tights
+                                </a>
+                            </p>
+
+                            <p>
+                                <a title="Premium Kneepads:" href="/kneepads.html">
+                                    Premium Kneepads
+                                </a>
+                            </p>
+
+
+
+                            <p>
+                                <a title="Order Now" href="/contact.html">
+                                    Order Now
+                                </a>
+                            </p>
+
+
+
+
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
+                        <p class="mb-3"><strong class="text-secondary h5 fw-500 fs-20"> Contact us</strong></p>
+                        <div class="footer-nav">
+                            <p class="d-flex mb-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-telephone me-3" viewBox="0 0 16 16">
+                                    <path
+                                        d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                                </svg>
+                                <a title="Footer Phone Number" href="tel:+12144074751"> (214) 407-4751 </a>
+                            </p>
+                            <p class="d-flex">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt me-3" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                                    <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                                </svg>
+                                <span> Made in texas </span>
+                            </p>
+                            <!-- <p><i class="fa-solid fa-tower-broadcast text-primary me-2"></i> 24 Hours Emergency Services</p> -->
+
+                            <!-- <a title="Facebook Navigation" class=" d-flex align-items-center" target="_blank"
                         href="https://www.facebook.com/gtzlandscaping/"><i
                             class="fs-24 fa-brands fa-facebook me-3 text-primary"></i> Facebook</a> -->
 
+                        </div>
                     </div>
                 </div>
+                <hr class="mt-4" />
+
+                <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy;
+                    Dream Gear Maker 2024. All
+                    rights
+                    reserved.</p>
+                <p class="pt-2 pb-3 fw-500 text-white text-center">The content available on this website is owned by us
+                    and
+                    our licensors. Copying any content, including images, without our consent is prohibited.</p>
             </div>
-            <hr class="mt-4" />
-
-            <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy;
-                Dream Gear Maker 2024. All
-                rights
-                reserved.</p>
-            <p class="pt-2 pb-3 fw-500 text-white text-center">The content available on this website is owned by us
-                and
-                our licensors. Copying any content, including images, without our consent is prohibited.</p>
-        </div>
-    </footer>
+        </footer>
 
 
-    <!--End pagewrapper-->
+        <!--End pagewrapper-->
 
-    <!--Scroll to top-->
-    <!-- <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fas fa-arrow-up"></span></div> -->
+        <!--Scroll to top-->
+        <!-- <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fas fa-arrow-up"></span></div> -->
 
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/bootstrap-select.min.js"></script>
-    <script src="assets/js/jquery.fancybox.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/appear.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/scrollbar.js"></script>
-    <script src="assets/js/TweenMax.min.js"></script>
-    <script src="assets/js/swiper.min.js"></script>
-    <script src="assets/js/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/js/parallax-scroll.js"></script>
+        <script src="assets/js/jquery.js"></script>
+        <script src="assets/js/popper.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/bootstrap-select.min.js"></script>
+        <script src="assets/js/jquery.fancybox.js"></script>
+        <script src="assets/js/isotope.js"></script>
+        <script src="assets/js/owl.js"></script>
+        <script src="assets/js/appear.js"></script>
+        <script src="assets/js/wow.js"></script>
+        <script src="assets/js/scrollbar.js"></script>
+        <script src="assets/js/TweenMax.min.js"></script>
+        <script src="assets/js/swiper.min.js"></script>
+        <script src="assets/js/jquery.ajaxchimp.min.js"></script>
+        <script src="assets/js/parallax-scroll.js"></script>
 
-    <script src="assets/js/script.js"></script>
+        <script src="assets/js/script.js"></script>
 
 
 </body>
