--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                             </div>
                         </div>
 
-                        Each piece is meticulously crafted to look great but also to optimize performance and
+                        Each piece is perfectly crafted to look great but also to optimize performance and
                         comfort. Choosing Dream Gear Maker means you’re investing in yourself by choosing the wrestling
                         gear maker of champions!
 
@@ -584,7 +584,7 @@
                             Durability. At Dream Gear, we're dedicated to providing wrestlers with top-notch gear that's
                             built to last and meet the rigors of the sport. <br>
                             <br>
-                            Each piece of our wrestling gear is meticulously crafted with premium materials, ensuring
+                            Each piece of our wrestling gear is perfectly crafted with premium materials, ensuring
                             exceptional durability and performance. Whether you're training hard or competing in the
                             ring, our gear is designed to offer maximum comfort, support, and protection.
                             <br> <br>
