--- a/kneepads.html
+++ b/kneepads.html
@@ -42,8 +42,8 @@
                     <div class="inner-container">
                         <div class="left-column">
                             <ul class="contact-info">
-                                <li><i class="fa fa-globe"></i>World Wide Shipping</li>
-                                <li><a href="mailto:dreamgearmaker@gmail.com"><i class="flaticon-email"></i>dreamgearmaker@gmail.com</a></li>
+                                <li><i class="globe fa fa-globe"></i>World Wide Shipping</li>
+                                <li><a href="mailto:dreamgearmaker@gmail.com"><i class="email fa fa-envelope" style="font-size:16px;color:red"></i>dreamgearmaker@gmail.com</a></li>
 
 
 
@@ -53,8 +53,7 @@
                         </div>
                         <div class="right-column">
                             <ul class="social-icon">
-                                <li><a href="https://www.facebook.com/profile.php?id=100083208098697" target="_blank"><i
-                                            class="icon-1 fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100083208098697" target="_blank"><i class="fa fa-facebook-f" style="font-size:24px;color:red"></i></a></li>
 
 
                                 <li><a href="https://www.instagram.com/dreamgearmaker/" target="_blank"><i
