--- a/kneepads.html
+++ b/kneepads.html
@@ -21,7 +21,9 @@
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -347,9 +349,9 @@
                             crafted for your performance, or stylized for your persona.</div>
                         <ul class="list">
                             <li><i class="fas fa-arrow-circle-right"></i> Top-tier Wrestling Gear</li>
-                            <li><i class="fas fa-arrow-circle-right"></i>Comfortable</li>
-                            <li><i class="fas fa-arrow-circle-right"></i> We Equip You for Victory</li>
-                            <li><i class="fas fa-arrow-circle-right"></i> Guaranteed Delivery</li>
+                        <li><i class="fas fa-arrow-circle-right"></i>Comfortable</li>
+                        <li><i class="fas fa-arrow-circle-right"></i> We Equip You for Victory</li>
+                        <li><i class="fas fa-arrow-circle-right"></i> Guaranteed Delivery</li>
                         </ul>
                         <br>
                         <div class="text">
