--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,9 @@
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -54,7 +56,8 @@
                         </div>
                         <div class="right-column">
                             <ul class="social-icon">
-                                <li><a href="https://www.facebook.com/profile.php?id=100083208098697" target="_blank"><i class="fa fa-facebook-f" style="font-size:24px;color:red"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100083208098697" target="_blank"><i
+                                            class="fa fa-facebook-f" style="font-size:24px;color:red"></i></a></li>
 
 
                                 <li><a href="https://www.instagram.com/dreamgearmaker/" target="_blank"><i
@@ -221,8 +224,8 @@
                     <div class="col-lg-4 icon_box">
 
                         <div class="inner-box">
-                            <div class="icon"><i class="fa fa-facebook-f"
-                                    style="font-size:26px;color:rgb(255, 255, 255)"></i></div>
+                            <div class="icon"><i class="fab fa-facebook-f"
+                                style="font-size:23px;color:rgb(255, 255, 255)"></i></div>
                             <div class="text">Massage on facebook</div>
                             <h4 class="gmail"><a class="gmail"
                                     href="https://www.facebook.com/profile.php?id=100083208098697">Dream Gear Maker</a>
@@ -232,7 +235,7 @@
                     <div class="col-lg-4 icon_box">
                         <div class="inner-box">
                             <div class="icon"><i class="fa fa-instagram"
-                                    style="font-size:30px;color:rgb(255, 255, 255)"></i></div>
+                                style="font-size:23px;color:rgb(255, 255, 255)"></i></div>
                             <div class="text">Massage on instagram</div>
                             <h4 class="gmail"><a class="gmail"
                                     href="https://www.instagram.com/dreamgearmaker/">@dreamgearmaker</a></h4>
